css cleanup less issues with reloading and jumping about when in the editor Don't sort keys when returning the json. More intelligent "ready"

--- a/spiffworkflow-frontend/src/rjsf/carbon_theme/index.css
+++ b/spiffworkflow-frontend/src/rjsf/carbon_theme/index.css
@@ -59,6 +59,7 @@
 
 .rjsf .array-item {
   padding-top: 1rem;
+  padding-bottom: 1rem;
   margin-bottom: 1rem;
   background: rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
